--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "@marudor/node-pre-gyp": "^0.16.1",
-    "bindings": "~1.5.0",
-    "nan": "~2.14.0"
+    "bindings": "^1.5.0",
+    "nan": "VerteDinde/nan#deprecate_accessor_signature"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
